--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "kartik-v/yii2-grid": "dev-master",
         "2amigos/yii2-date-time-picker-widget" : "~1.0",
         "2amigos/yii2-date-picker-widget" : "~1.0",
-        "kartik-v/yii2-widget-datetimepicker": "dev-master"
+        "borales/yii2-phone-input": "*",
+        "kartik-v/yii2-widget-select2": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
