Done update profile

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "2amigos/yii2-date-time-picker-widget" : "~1.0",
         "2amigos/yii2-date-picker-widget" : "~1.0",
         "borales/yii2-phone-input": "*",
-        "kartik-v/yii2-widget-select2": "dev-master"
+        "kartik-v/yii2-widget-select2": "dev-master",
+        "kartik-v/yii2-widget-fileinput": "dev-master",
+        "yurkinx/yii2-image": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
