--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "borales/yii2-phone-input": "*",
         "kartik-v/yii2-widget-select2": "dev-master",
         "kartik-v/yii2-widget-fileinput": "dev-master",
-        "yurkinx/yii2-image": "dev-master"
+        "yurkinx/yii2-image": "dev-master",
+        "kartik-v/yii2-widget-switchinput": "^1.3",
+        "2amigos/yii2-gallery-widget" : "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
