--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "kartik-v/yii2-widget-fileinput": "dev-master",
         "yurkinx/yii2-image": "dev-master",
         "kartik-v/yii2-widget-switchinput": "^1.3",
-        "2amigos/yii2-gallery-widget" : "*"
+        "2amigos/yii2-gallery-widget" : "*",
+        "kartik-v/yii2-mpdf": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
