--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "yurkinx/yii2-image": "dev-master",
         "kartik-v/yii2-widget-switchinput": "^1.3",
         "2amigos/yii2-gallery-widget" : "*",
-        "kartik-v/yii2-mpdf": "dev-master"
+        "kartik-v/yii2-mpdf": "dev-master",
+        "philippfrenzel/yii2fullcalendar":"3.9.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -40,11 +41,15 @@
         "codeception/module-filesystem": "^1.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
         "symfony/browser-kit": ">=2.7 <=4.2.4"
+        
     },
     "config": {
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
+        },
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
         }
     },
     "repositories": [
@@ -53,4 +58,5 @@
             "url": "https://asset-packagist.org"
         }
     ]
+    
 }
