--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "kartik-v/yii2-widget-switchinput": "^1.3",
         "2amigos/yii2-gallery-widget" : "*",
         "kartik-v/yii2-mpdf": "dev-master",
-        "philippfrenzel/yii2fullcalendar":"3.9.0"
+        "philippfrenzel/yii2fullcalendar":"3.9.0",
+        "kartik-v/yii2-bootstrap4-dropdown": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
