--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,7 @@
         "kartik-v/yii2-bootstrap4-dropdown": "@dev",
         "2amigos/yii2-chartjs-widget": "~2.0",
         "2amigos/yii2-highcharts-widget": "~1.0",
-        "kartik-v/yii2-export": "@dev",
-        "kartik-v/yii2-date-range": "dev-master",
-        "jino5577/yii2-date-range-picker": "*",
-        "kartik-v/yii2-field-range": "*",
-        "kartik-v/yii2-widget-datepicker":"*",
-        "demmonico/yii2-sms": "*"
+        "kartik-v/yii2-export": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
