--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "codeception/module-yii2": "^1.0",
         "codeception/module-filesystem": "^1.0",
         "codeception/verify": "~0.5.0 || ~1.1.0",
-        "symfony/browser-kit": ">=2.7 <=4.2.4"
+        "symfony/browser-kit": ">=2.7 <=4.2.4",
+        "purrweb/yii2-heroku": "*"
         
     },
     "config": {
@@ -55,6 +56,11 @@
         "allow-plugins": {
             "yiisoft/yii2-composer": true
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "sh post-install-cmd.sh"
+        ]
     },
     "repositories": [
         {
